--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,15 @@ _testmain.go
 /test/run.out
 /test/times.out
 
+# Binaries for programs and plugins
+*.exe~
+*.dll
+*.dylib
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+.idea
+
 # This file includes artifacts of Go build that should not be checked in.
 # For files created by specific development environment (e.g. editor),
 # use alternative ways to exclude files from git.
