--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,13 @@ _testmain.go
 *.out
 .idea
 
+# Go workspace file
+go.work
+go.work.sum
+
+# env file
+.env
+
 # This file includes artifacts of Go build that should not be checked in.
 # For files created by specific development environment (e.g. editor),
 # use alternative ways to exclude files from git.
